<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/settingsPanelLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cleLayerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/controls_margin"
                android:layout_marginTop="@dimen/controls_margin"
                android:layout_marginEnd="@dimen/controls_margin"
                android:layout_marginBottom="@dimen/controls_margin"
                android:labelFor="@id/editTextCleLayer"
                android:text="@string/cle_layer_name_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <EditText
                android:id="@+id/editTextCleLayer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/controls_margin"
                android:layout_weight="1"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text="@string/cle_layer_default_name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/radiusLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/controls_margin"
                android:layout_marginTop="@dimen/controls_margin"
                android:layout_marginEnd="@dimen/controls_margin"
                android:layout_marginBottom="@dimen/controls_margin"
                android:labelFor="@id/searchRadiusSeekBar"
                android:text="@string/search_radius_label_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <SeekBar
                android:id="@+id/searchRadiusSeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/controls_margin"
                android:layout_weight="1"
                android:max="1000"
                android:progress="500" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/connectivityModeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/controls_margin"
                android:layout_marginTop="@dimen/controls_margin"
                android:layout_marginEnd="@dimen/controls_margin"
                android:layout_marginBottom="@dimen/controls_margin"
                android:labelFor="@id/connectivityModeSpinner"
                android:text="@string/connectivity_mode_label_text"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <Spinner
                android:id="@+id/connectivityModeSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/controls_margin"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

    <!-- Map Fragment embedded with the map object -->
    <fragment
        android:id="@+id/mapfragment"
        class="com.here.android.mpa.mapping.AndroidXMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsPanelLayout" />

    <Button
        android:id="@+id/buttonUpload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/controls_margin"
        android:layout_marginBottom="@dimen/controls_margin"
        android:text="@string/upload_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonDownload"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/controls_margin"
        android:layout_marginBottom="@dimen/controls_margin"
        android:text="@string/download_button_text"
        app:layout_constraintBottom_toTopOf="@+id/buttonUpload"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addGeometryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/controls_margin"
        android:layout_marginBottom="@dimen/controls_margin"
        android:text="@string/add_geometry_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/clearMapButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/controls_margin"
        android:layout_marginBottom="@dimen/controls_margin"
        android:text="@string/clear_map_button_text"
        app:layout_constraintBottom_toTopOf="@+id/addGeometryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/addGeometryButton" />

    <Button
        android:id="@+id/purgeLocalStorageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/controls_margin"
        android:layout_marginTop="@dimen/controls_margin"
        android:text="@string/purge_button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsPanelLayout" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/controls_margin"
        android:layout_marginEnd="@dimen/controls_margin"
        android:text="@string/search_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsPanelLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
